# Django-template

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
