[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Basic template for Django project"
authors = ["amir-zholdybaev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
python-dotenv = "^1.0.0"
django-debug-toolbar = "^4.2.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.5"
psycopg = "^3.1.12"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
